# deepflow

./: CHANGELOG.md
.github/workflows/: agent-build-rust-env.yml
agent/docker/: DockerfileToFix-aarch64.build  DockerfileToFix.build  dockerfile-build-env
agent/plugins/integration_vector/: Cargo.toml  config.yaml
agent/plugins/integration_vector/src/: main.rs
agent/src/: integration_collector.rs  trident.rs
message/: flow_log.proto
server/: go.mod
server/ingester/flow_log/decoder/: decoder.go
server/ingester/flow_log/log_data/dd_import/: dd_import.go
